--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,11 @@ spring.mvc.view.suffix=.jsp
 
 
 #cas 前缀
-cas.server-url-prefix=https://192.168.38.238/cas-server/
+cas.server-url-prefix=https://192.168.240.106:31943/unisso
 #cas cas登录
-cas.server-login-url=https://192.168.38.238/cas-server/login                                                                                                                                                                                                                                                                                                                                                 /login
+cas.server-login-url=https://192.168.240.106:31943/unisso/login.action
 #回调
-cas.client-host-url=https://127.0.0.1:8080/
+cas.client-host-url=https://192.168.240.184:8080/
 #Ticket校验器使用Cas30ProxyReceivingTicketValidationFilter
 cas.validation-type=CAS3
 #cas不拦截的url
